updated build files

--- a/tests/frame.html
+++ b/tests/frame.html
@@ -13,7 +13,7 @@
     </style>
 
     <script type="text/javascript" language="javascript" src="js/AppHarness.js"></script>
-    <script type="text/javascript" language="javascript" src="../build/AME.next.js"></script>
+    <script type="text/javascript" language="javascript" src="../build/awayjs.next.js"></script>
 
     <script type="text/javascript">
 
