added preserveAspectRatio and origin properties to PerspectiveProjection updated Billboard to use billboardWidth and biilboardHeight as internal dimension values

--- a/tests/index.html
+++ b/tests/index.html
@@ -75,6 +75,7 @@
 
             harness.addSeperator( 'Entities' );
             harness.addTest( 'Entities.BillboardEntityTest'    ,  'tests.entities.BillboardEntityTest'  , 'js/BillboardEntityTest.js'    , 'away/entities/BillboardEntityTest.ts'  );
+            harness.addTest( 'Entities.LayoutTest'    ,  'tests.entities.LayoutTest'  , 'js/LayoutTest.js'    , 'away/entities/LayoutTest.ts'  );
 
             //---------------------------------------------------------------------------
             // Test - Library
