--- a/tests/index.html
+++ b/tests/index.html
@@ -39,7 +39,7 @@
 
             harness.addSeperator( 'Net' );
             harness.addTest( 'Net.URLLoader'       , 'tests.net.LoaderTest'  , 'net/URLLoaderTests.js' , 'net/URLLoaderTests.ts'  );
-            harness.addTest( '(Console) AssetLoaderTest'    ,  'tests.net.AssetLoaderTest'  , 'net/AssetLoaderTest.js'    , 'net/AssetLoaderTest.ts'  );
+            harness.addTest( '(Console) LoaderSessionTest'    ,  'tests.net.LoaderSessionTest'  , 'net/LoaderSessionTest.js'    , 'net/LoaderSessionTest.ts'  );
             harness.addTest( 'Loaders.IMGLoaderTest'                ,  'tests.net.IMGLoaderTest'    , 'net/IMGLoaderTest.js'      , 'net/IMGLoaderTest.ts'  );
 
             //---------------------------------------------------------------------------
